--- a/.gitattributes
+++ b/.gitattributes
@@ -3,17 +3,40 @@
 
 # Declare text files that will always be normalized and converted
 #   to native line endings on checkout:
-*.txt text
-*.md text
-*.c text
-*.h text
-*.hex text
+*.txt        text
+*.md         text
+*.c          text
+*.h          text
+*.cpp        text
+*.hpp        text
+*.c++        text
+*.h++        text
+*.bat        text
+*.css        text
+*.htm        text
+*.html       text
+*.xml        text
+*.yaml       text
+*.ini        text
+*.hex        text
+LICENSE      text
 
 # Declare files that will always have LF/CRLF line endings on checkout:
-*.svg eol=lf
-*.sh eol=lf
+*.svg        text eol=lf
+*.sh         text eol=lf
+*.mk         text eol=lf
 
 # Declare files that are truly binary and should not be modified:
-*.png binary
-*.jpg binary
-*.pdf binary
+*.png        binary
+*.jpg        binary
+*.jpeg       binary
+*.gif        binary
+*.tif        binary
+*.tiff       binary
+*.ico        binary
+*.png        binary
+*.pdf        binary
+*.zip        binary
+*.tar        binary
+*.gz         binary
+*.tgz        binary
